# MTEC-353

./: README.md
01.GettingStarted/3.dSYM/Contents/Resources/Relocations/x86_64/: 3.yml
Activities/: 03.audio_data_organization_design.c  MIDIMessage.cpp  MIDIMessage.h  Object_Classes  midi_base  midi_base.cpp  midi_chord_class  midi_chord_struct.cpp.cpp
Activities/01.GettingStarted/: 3
Activities/01.GettingStarted/3.dSYM/Contents/Resources/DWARF/: 3
Activities/01.GettingStarted/Group_Activity/: 0911.c  test.c
Activities/midi_base.dSYM/Contents/Resources/DWARF/: midi_base
Activities/midi_base.dSYM/Contents/Resources/Relocations/x86_64/: midi_base.yml
Assignment/LabExercise1/: README.md
Assignment/LabExercise2/docs/: ai_conversation_log.txt  learning_journal.md
Assignment/LabExercise2/src/: melody_generator.c
Assignment/LabExercise3/: CMakeLists.txt  README.md
Assignment/LabExercise3/docs/: ai_conversation_log.md  learning_journal.md
Assignment/LabExercise4/: CMakeLists.txt
Assignment/LabExercise4/src/: Main.cpp
FinalProject/AI Stratergy/: AI_Stratergy.md
FinalProject/Implementation/: README.md
FinalProject/Implementation/Convolution_Reverb/: CMakeLists.txt
FinalProject/Implementation/Convolution_Reverb/Source/: ConvolutionEngine.cpp  ConvolutionEngine.h  IRLoader.cpp  IRLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
FinalProject/Implementation/PolySynth/: PolySynth.jucer
FinalProject/Implementation/PolySynth/Builds/VisualStudio2022/: PolySynth.sln  PolySynth_App.vcxproj  PolySynth_App.vcxproj.filters
FinalProject/Implementation/PolySynth/JuceLibraryCode/: JuceHeader.h
FinalProject/Implementation/PolySynth/Source/: Main.cpp
FinalProject/Implementation_with_FFT/: CMakeLists.txt  DESIGN.md  README.md  presentation (2).md
FinalProject/Implementation_with_FFT/Convolution_Reverb/Source/: ConvolutionEngine.cpp  PluginEditor.h
FinalProject/Implementation_with_FFT/docs/: ai_collaboration_synthesis.md
FinalProject/Implementation_with_FFT/docs/presentation/: README.md
FinalProject/Implementation_with_FFT/src/: ConvolutionEngine.cpp  ConvolutionEngine.h  IRLoader.cpp  PluginEditor.cpp  PluginEditor.h
FinalProject/Proposal/: README.md
In-Class_Activities/: Live-coding.cpp  MIDI_Message_Polymorphism.cpp  Main.cpp  Main2.cpp  Mock_up_Mid  Object_Classes  callback.c  midi_chord_class.cpp
In-Class_Activities/01.GettingStarted/: 3.c
In-Class_Activities/01.PolySynth/: CMakeLists.txt  PolySynth.filtergraph
In-Class_Activities/01.PolySynth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h
In-Class_Activities/JUCE_Plugin/: CMakeLists.txt
In-Class_Activities/JUCE_Plugin/Source/: PluginProcessor.cpp  PluginProcessor.h
In-Class_Activities/PolySynth/Builds/VisualStudio2022/: PolySynth.sln  PolySynth_App.vcxproj  PolySynth_App.vcxproj.filters  resources.rc
In-Class_Activities/midi_base.dSYM/Contents/: Info.plist
LabExercise1/docs/: ai_conversation_log.md
LabExercise1/src/: hello_audio_world.c
ProcessJournals/: week_03_journal.md  week_04_journal.md  week_07_journal.md  week_09_journal.md  week_10_journal.md
